--- a/templates/base.html
+++ b/templates/base.html
@@ -46,9 +46,26 @@
             <li><a href="{{ url_for('register')}}">Register</a></li>
           </ul>
     </header>
- 
-    {% block content %}
-    {% endblock %}
+
+    <section>
+      <!--Display flash messages-->
+      {% with messages= get_flashed_messages() %}
+        {% if messages %}
+          {% for message in messages %}
+            <div class="row flashes">
+              <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
+            </div>
+          {% endfor %}
+
+        {% endif %}
+      {% endwith %}
+    </section>
+
+    <main class="container">
+      {% block content %}
+      {% endblock %}
+    </main>
+    
 
     <!-- jquery file-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
