--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-<h3 class="center-align">Register</h3>
+<h3 class="center-align">Login</h3>
 <div class="row">
-    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register')}}">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login')}}">
       <div class="card-panel">
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-user-cog prefix light-blue-text text-darken-4"></i>
                 <input id="username"  name="username" type="text" class="validate" pattern="^[a-zA-Z0-9]{5,15}$" minlength="5" maxlength="15" required>
                 <label for="username">Username</label>
               </div>
@@ -19,17 +19,17 @@
             </div>
       </div>
       <div class="row">
-          <button type="submit" class="col s12 btn-large light-blue text-darken-4 text-shadow">Register <i class="fas fa-sign-in-alt"></i></button>
+          <button type="submit" class="col s12 btn-large light-blue text-darken-4 text-shadow">Log In <i class="fas fa-sign-in-alt"></i></button>
       </div>
     </form>
   </div>
             
-  <div class="row">
-    <div class="col s12">
-      <p class="center-align">
-        Already Registered? <a href="{{ url_for('login')}}"class="light-blue-text text-darken-4">Log In</a>
-      </p>
-    </div>
+<div class="row">
+  <div class="col s12">
+    <p class="center-align">
+      New Here? <a href="{{ url_for('register')}}"class="light-blue-text text-darken-4">Register Account</a>
+    </p>
   </div>
+</div>
 
 {% endblock %}
