add session user profile

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,6 +21,7 @@
       <div class="row">
           <button type="submit" class="col s12 btn-large light-blue text-darken-4 text-shadow">Log In <i class="fas fa-sign-in-alt"></i></button>
       </div>
+      </div>
     </form>
   </div>
             
