--- a/templates/base.html
+++ b/templates/base.html
@@ -1,84 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
-    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
-   
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" type="text/css">
-    {% block styles %}
-    {% endblock %}
-    <title>Task Manager</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    type="text/css">
+
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" type="text/css">
+  {% block styles %}
+  {% endblock %}
+  <title>Task Manager</title>
 </head>
+
 <body>
-    <header>
-        <nav class="nav-extended text-shadow light-blue darken-1">
-            <!--top navbar-->
-            <div class="nav-wrapper">
-              <a href="{{ url_for('get_tasks')}}" class="brand-logo">Task Manager</a>
-              <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
-              <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('get_tasks')}}">Home</a></li>
-                <li><a href="{{ url_for('profile', username=session['user'])}}">Profile</a></li>
-                <li><a href="#">New Task</a></li>
-                <li><a href="#">Manage Categories</a></li>
-                <li><a href="#">Log Out</a></li>
-                <li><a href="{{ url_for('login')}}">Log In</a></li>
-                <li><a href="{{ url_for('register')}}">Register</a></li>
-                
-              </ul>
-            </div>
-          </nav>
-        
-          <!--mobile sidenav-->
-          <ul class="sidenav" id="mobile-demo">
-              <li><h4 class="center-align light-blue-text text-darken-4">Task Manager</h4></li>
-            <li><a href="{{ url_for('get_tasks')}}">Home</a></li>
-            <li><a href="{{ url_for('profile', username=session['user'])}}">Profile</a></li>
-            <li><a href="#">New Task</a></li>
-            <li><a href="#">Manage Categories</a></li>
-            <li><a href="#">Log Out</a></li>
-            <li><a href="{{ url_for('login')}}">Log In</a></li>
-            <li><a href="{{ url_for('register')}}">Register</a></li>
-          </ul>
-    </header>
+  <header>
+    <nav class="nav-extended text-shadow light-blue darken-1">
+      <!--top navbar-->
+      <div class="nav-wrapper">
+        <a href="{{ url_for('get_tasks')}}" class="brand-logo">Task Manager</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="{{ url_for('get_tasks')}}">Home</a></li>
+          {% if session.user %}
+          <li><a href="{{ url_for('profile', username=session['user'])}}">Profile</a></li>
+          <li><a href="#">New Task</a></li>
+          <li><a href="#">Manage Categories</a></li>
+          <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+          {% else %}
+          <li><a href="{{ url_for('login')}}">Log In</a></li>
+          <li><a href="{{ url_for('register')}}">Register</a></li>
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
 
-    <section>
-      <!--Display flash messages-->
-      {% with messages= get_flashed_messages() %}
-        {% if messages %}
-          {% for message in messages %}
-            <div class="row flashes">
-              <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
-            </div>
-          {% endfor %}
+    <!--mobile sidenav-->
+    <ul class="sidenav" id="mobile-demo">
+      <li>
+        <h4 class="center-align light-blue-text text-darken-4">Task Manager</h4>
+      </li>
+      <li><a href="{{ url_for('get_tasks')}}">Home</a></li>
+      {% if session.user %}
+      <li><a href="{{ url_for('profile', username=session['user'])}}">Profile</a></li>
+      <li><a href="#">New Task</a></li>
+      <li><a href="#">Manage Categories</a></li>
+      <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+      {% else %}
+      <li><a href="{{ url_for('login')}}">Log In</a></li>
+      <li><a href="{{ url_for('register')}}">Register</a></li>
+      {% endif %}
+    </ul>
+  </header>
 
-        {% endif %}
-      {% endwith %}
-    </section>
+  <section>
+    <!--Display flash messages-->
+    {% with messages= get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <div class="row flashes">
+      <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
+    </div>
+    {% endfor %}
 
-    <main class="container">
-      {% block content %}
-      {% endblock %}
-    </main>
-    
+    {% endif %}
+    {% endwith %}
+  </section>
 
-    <!-- jquery file-->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
-    crossorigin="anonymous">
-    </script>
-
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js')}}"></script>
-
-    {% block scripts %}
+  <main class="container">
+    {% block content %}
     {% endblock %}
+  </main>
+
+
+  <!-- jquery file-->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+  </script>
+
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="{{ url_for('static', filename='js/script.js')}}"></script>
+
+  {% block scripts %}
+  {% endblock %}
 </body>
+
 </html>
