--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -4,7 +4,7 @@
 <h3 class="light-blue-text text-darken-4 center-align">Add Task</h3>
 
 <div class="row card-panel gray lighten-5">
-    <form class="col s12" method="POST" action="">
+    <form class="col s12" method="POST" action="{{url_for('add_task')}}">
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
-                <input id="due_date" name="due_date" " type=" text" class="datepicker validate" required>
+                <input id="due_date" name="due_date"  type="text" class="datepicker validate" required>
                 <label for="due_date">Due Date</label>
             </div>
         </div>
@@ -51,6 +51,14 @@
                         Is Urgent?
                     </label>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12 center-align">
+                <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                    Add Task 
+                    <i class="fas fa-plus-square right"></i> 
+                </button>
             </div>
         </div>
     </form>
