--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -8,7 +8,7 @@
         {{task.is_urgent}}<br>
         {{task.due_date}}<br>
     {% endfor %} -->
-
+    <h3 class="light-blue-text text-darken-4 center-align">All Task</h3>
     <ul class="collapsible">
         {% for task in tasks %}
         <li>
@@ -23,6 +23,7 @@
             <div class="collapsible-body">
               <strong>{{task.category_name}}</strong>
               <p>{{task.task_description}}</p>
+              <p><em>by: {{task.created_by}}</em></p>
             </div>
         </li>
         {% endfor %}
