--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -5,23 +5,28 @@
 
 <div class="row card-panel gray lighten-5">
     <form class="col s12" method="POST" action="{{url_for('edit_task', task_id=task._id)}}">
+     <!--Category-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
                 <select id="category_name" name="category_name" class="validate" required>
-                    <option value="" disabled selected>Choose your option</option>
+                    <option value="" disabled>Choose your option</option>
                     {% for category in categories %}
-                    <option value="{{category.category_name}}">{{category.category_name}}</option>
+                        {% if category.category_name == task.category_name %}
+                            <option value="{{category.category_name}}" selected>{{category.category_name}}</option>
+                        {% else %}
+                            <option value="{{category.category_name}}">{{category.category_name}}</option>
+                    {% endif %}
                     {% endfor %}
                 </select>
                 <label for="category_name">Choose Category</label>
             </div>
         </div>
+          <!--Task Name-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-                <input id="task_name" name="task_name" minlength="5" maxlength="50
-                " type="text" class="validate" required>
+                <input id="task_name" name="task_name" minlength="5" maxlength="50" value="{{task.task_name}}" type="text" class="validate" required>
                 <label for="task_name">Task Name</label>
             </div>
         </div>
@@ -29,14 +34,16 @@
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
                 <textarea id="task_description" name="task_description" minlength="5" maxlength="200"
-                    class="materialize-textarea validate" required></textarea>
+                    class="materialize-textarea validate" required>
+                    {{- task.task_description -}}
+                </textarea>
                 <label for="task_description">Task Description</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
-                <input id="due_date" name="due_date"  type="text" class="datepicker validate" required>
+                <input id="due_date" name="due_date" value="{{task.due_date}}"  type="text" class="datepicker validate" required>
                 <label for="due_date">Due Date</label>
             </div>
         </div>
@@ -46,7 +53,11 @@
                 <div class="switch">
                     <i class="fas fa-exclamation-circle prefix light-blue-text text-darken-4"></i>
                     <label for="is_urgent">
-                        <input type="checkbox" id="is_urgent" name="is_urgent">
+                        {% if task.is_urgent == "on" %}
+                            <input type="checkbox" id="is_urgent" name="is_urgent" checked>
+                        {% else %}
+                            <input type="checkbox" id="is_urgent" name="is_urgent">
+                        {% endif %}
                         <span class="lever"></span>
                         Is Urgent?
                     </label>
@@ -55,6 +66,10 @@
         </div>
         <div class="row">
             <div class="col s12 center-align">
+                <!--cancel button-->
+                <a href="{{url_for('get_tasks')}}" class="btn-large red text-shadow">
+                    Cancel <i class="fas fa-times-circle right"></i>
+                </a>
                 <button type="submit" class="btn-large light-blue darken-1 text-shadow">
                     Edit Task 
                     <i class="fas fa-edit right"></i> 
