--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,14 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
 
-<!-- {% for task in tasks %}
-        {{task.task_name}}<br>
-        {{task.category_name}}<br>
-        {{task.task_description}}<br>
-        {{task.is_urgent}}<br>
-        {{task.due_date}}<br>
-    {% endfor %} -->
 <h3 class="light-blue-text text-darken-4 center-align">All Task</h3>
+
+<div class="row card-panel grey lighten-5">
+  <form action="{{url_for('search')}}" class="col s12" method="post">
+    <div class="row valig-wrapper center-align">
+      <div class="input-field col s12 m8">
+        <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+        <input type="text" name="query" id="query" minlength="3" class="validate" required>
+        <label for="query">Search Tasks</label>
+      </div>
+      <div class="col s12 m4">
+        <a href="{{url_for('get_tasks')}}" class="red btn text-shadow">Reset</a>
+        <button type="submit" class="light-blue darken-1 btn text-shadow">
+          <i class="fas fa-search left"></i>Search  
+        </button>
+      </div>
+    </div>
+  </form>
+
+</div>
+
+{% if tasks|length > 0 %}
+
 <ul class="collapsible">
   {% for task in tasks %}
   <li>
@@ -37,4 +52,7 @@
   </li>
   {% endfor %}
 </ul>
+{% else %}
+  <h3 class="red-text text-darken-4 center-align">No Result Found</h3>
+{% endif %}
 {% endblock %}
